Fixed scaling issue on mobile.
Fixed an issue that obscured content when scaling for mobile.

--- a/docs/style.css
+++ b/docs/style.css
@@ -77,6 +77,7 @@ body
 	transform: translate(0, -50%);
 	width: 60%;
   	top: 50%;
+	font-size: 2.5vmin;
 }
 .text-content p
 {
